# RGAN-Research-Project

./: .gitignore  CLAUDE.md  COLAB_INTEGRATION_SUMMARY.md  COLAB_QUICK_START.md  README.md  RGAN_Colab.ipynb  RGAN_Colab_Demo.ipynb  RGAN_Colab_Demo_Enhanced.ipynb  RGAN_Colab_Final.ipynb  SYNTHETIC_ANALYSIS_IMPLEMENTATION.md  TSLIB_BENCHMARK_NOTES.md  USAGE_EXAMPLE.md  check_gpu.py  colab_utils.py  doc.md  document.md  draft.docx  enhance_notebook.py  generate_colab_notebook.py  peek_m5.py  pyproject.toml  requirements.txt  run_augmentation_experiment.py  run_experiment.py  run_full_experiment.ps1  run_pipeline.ps1  run_tslib_benchmark.py  summary.md
.foundry/: agent-metadata.yaml
cloud/: entry_point.py  entry_point_augment.py  launch.py  launch_augment.py  launch_augment_batch.py  s3_utils.py  sync.py
dashboard/: app.js  index.html  styles.css
data/beijing_air/: README.md
data/beijing_pm25/: README.md
data/gas_sensor_home/: README.md
data/household_power/: README.md
data/metropt3/: README.md
data/micro_gas_turbine/: README.md
data/nasa_power_austin_hourly/: README.md
demo_charts/: img-22f00e17-90ad-46a1-ab7b-184c7256676d  img-25083c17-9c1b-4f18-b004-325c7b147835  img-2f324e66-067d-4d83-a572-6a1f0a091b77
docs/: SYNTHETIC_ANALYSIS_IMPLEMENTATION.md  THINGS_TO_FIX.md  TSLIB_BENCHMARK_NOTES.md  USAGE_EXAMPLE.md
notebooks/: RGAN_Colab.ipynb
papers/: build_paper.py  template.tex
scripts/: aggregate_paper.py  fetch_natural_datasets.py
src/: prepare_m5.py
tests/: test_regressions.py
web_dashboard/: README.md  package-lock.json  package.json
(+67 files in other folders)
