[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgan-research"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "statsmodels>=0.13",
    "scikit-learn>=1.1",
    "torch>=2.2",
    "rich>=13.0",
    "plotly>=5.22",
    "psutil>=5.9",
]

[project.optional-dependencies]
cloud = ["sagemaker>=2.200", "boto3>=1.34"]
benchmark = ["datasets>=2.0"]

[project.scripts]
rgan-train = "rgan.scripts.run_training:main"
rgan-augment = "rgan.scripts.run_augmentation:cli_main"
rgan-benchmark = "rgan.scripts.run_benchmark:main"
rgan-prepare-m5 = "rgan.scripts.prepare_m5:cli_main"
rgan-build-paper = "rgan.scripts.build_paper:main"
rgan-charts = "rgan.scripts.regenerate_charts:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rgan*"]
